--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon -e ejs,js index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,7 @@
   },
   "homepage": "https://github.com/acoshift/pikkanode.js#readme",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "fs-extra": "^6.0.1",
     "koa": "^2.5.1",
     "koa-body": "^4.0.3",
