--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "koa-body": "^4.0.3",
     "koa-ejs": "^4.1.1",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.8.1",
     "koa-static": "^4.0.3",
     "mysql2": "^1.5.3",
+    "nodemon": "^1.17.5",
     "uuid": "^3.2.1"
   }
 }
