--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/acoshift/pikkanode.js#readme",
   "dependencies": {
+    "@koa/cors": "^2.2.1",
     "bcrypt": "^2.0.1",
     "fs-extra": "^6.0.1",
     "koa": "^2.5.1",
@@ -28,6 +29,7 @@
     "koa-session": "^5.8.1",
     "koa-static": "^4.0.3",
     "mysql2": "^1.5.3",
+    "nodemailer": "^4.6.7",
     "nodemon": "^1.17.5",
     "uuid": "^3.2.1"
   }
